# open-forms-client-django

./: .bumpversion.cfg  .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml  code-quality.yml  codeql-analysis.yml
fixtures/cassettes/: forms.yaml  invalid.yaml
openformsclient/: __init__.py  admin.py  apps.py  client.py  models.py  utils.py
openformsclient/migrations/: 0001_initial.py  0002_alter_configuration_options.py  0003_configuration_client_timeout.py
openformsclient/templates/openformsclient/templatetags/: openforms.html  openforms_form.html  openforms_sdk_css.html  openforms_sdk_js.html  openforms_sdk_media.html
openformsclient/templatetags/: openforms.py
testapp/: models.py  settings.py  urls.py  views.py
testapp/migrations/: 0001_initial.py
testapp/templates/: base.html  index.html  page.html
tests/: conftest.py  test_client.py  test_integration.py  test_models.py  test_templatetags.py  test_utils.py
tests/data/: forms.py
