# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-open-forms-client
version = 0.3.0
description = Easily integrate Open Forms in your Django application.
long_description = file: README.rst
url = https://github.com/open-formulieren/open-forms-client-django
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = Open Forms, Client, Django
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2
    django-solo
    requests
tests_require =
    requests-mock
    pytest
    pytest-django
    tox
    isort
    black
    flake8

[options.packages.find]
include =
    openformsclient
    openformsclient.*

[options.extras_require]
tests =
    requests-mock
    pytest
    pytest-django
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=openformsclient
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
ignore=E203,E501,F405,W503
max-line-length=88
exclude=env,.tox,doc
